# My-Portfolio-Manish2

./: README.md  index.html  portfolio-rs-61cd626ebfc801ba.js  portfolio-rs-61cd626ebfc801ba_bg.wasm  portfolio-rs-eff8020f977c4fce.js  portfolio-rs-eff8020f977c4fce_bg.wasm  style-9f4dd9e5ead88609.css
.github/workflows/: deploy.yml
portfolio-rs/: .gitignore  Cargo.toml  Trunk.toml  index.html
portfolio-rs/src/: data.rs  main.rs
portfolio-rs/src/components/: about.rs  conferences.rs  experience.rs  expertise.rs  footer.rs  hero.rs  mod.rs  nav.rs  publications.rs  skills.rs
